# xnat-access

./: NOTICE  README.md  pyproject.toml
xnat_access/: __init__.py  upload.py
