[tool.poetry]
name = "xnat-access"
version = "0.5"
authors = ["Christoph Jansen <Christoph.Jansen@htw-berlin.de>"]
license = "AGPL-3.0"
readme = "README.md"
repository = "https://github.com/somnonetz/xnat-access"
homepage = "https://cbmi.htw-berlin.de"
description = "XNAT Access."

[tool.poetry.dependencies]
python = "^3.4"
requests = "^2.21"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
